LA-75 - Footer overlap fix attempt

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,12 @@
 html,
 body{
   min-height: 100%;
+  height: 100%;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
 }
 
 .well-30 {
@@ -647,6 +653,8 @@ tbody.active td,
     background: $dark-grey;
     padding: 90px 0 120px 0;
     width: 100%;
+    flex: 0 0 auto;
+    margin-top: auto;
     z-index: 990;
     ul{
       padding: 0;
